--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
