--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
@@ -34,7 +35,9 @@
     "passport-google-oauth20": "^2.0.0",
     "path-parser": "^6.1.0",
     "sendgrid": "^5.2.3",
-    "stripe": "^8.63.0"
+    "socket.io": "^2.3.0",
+    "stripe": "^8.63.0",
+    "telegraf": "^3.38.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
