--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
+    "redux-socket.io": "^1.4.0",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
