--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "redux-form": "^8.3.6",
     "redux-socket.io": "^1.4.0",
     "redux-thunk": "^2.3.0",
+    "rfdc": "^1.1.4",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
