--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "http-proxy-middleware": "^1.0.4",
     "immer": "^7.0.5",
+    "js-base64": "^2.6.3",
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
