--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "dependencies": {
     "@sendgrid/helpers": "^7.2.0",
     "@sendgrid/mail": "^7.2.0",
+    "base64url": "^3.0.1",
     "body-parser": "^1.19.0",
     "concurrently": "^5.2.0",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.18",
     "node-telegram-bot-api": "^0.50.0",
     "passport": "^0.4.1",
